messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: "2.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: "2.0"
  template:
    metadata:
      labels:
        app: django-messaging
        version: "2.0"
    spec:
      containers:
        - name: django-app
          image: your-django-image:2.0
          ports:
            - containerPort: 8000
